--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Google Font roboto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Theatre Company</title>
 </head>
 <body>
-    
+    <!--Navigation Bar-->
+    <nav class="navbar navbar-expand-sm bg-black justify-content-start">
+        <div class="container-fluid">
+            <h1 class="theatre-title text-light">Griot Theater</h1>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-light">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-light">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-light">Our Actors</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-light">Mission</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-light">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="main-image-container">
+        <img src="/background image/theater-image-background.png" alt="multicolor silouettes and person on stage" class="main-image">
+    </div>
+    <div class="show-schedule-container p-5 m-5">
+        <h3 class="scheduled-month bg-light m-5 border-bottom border-top">April 2020</h3>
+        <div class="d-flex show-schedule-feature-1">
+            <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront p-5">
+            <h3 class="play-title">A Raisin In The Sun</h3>
+            <p class="theater-address">April 6, 2020 - March 12, 2021
+                Griot Theater, 233 State St Chicago, IL 
+                $75
+            </p>
+            <button class="btn btn-warning">Read More</button>
+        </div>
+    </div>
+    <!--Footer-->
+    <div class="bottom">
+
+    </div>
+
+
 </body>
 </html>
