--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/7afd958173.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -39,23 +41,120 @@
     <div class="main-image-container">
         <img src="/background image/theater-image-background.png" alt="multicolor silouettes and person on stage" class="main-image">
     </div>
-    <div class="show-schedule-container p-5 m-5">
-        <h3 class="scheduled-month bg-light m-5 border-bottom border-top">April 2020</h3>
-        <div class="d-flex show-schedule-feature-1">
-            <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront p-5">
-            <h3 class="play-title">A Raisin In The Sun</h3>
-            <p class="theater-address">April 6, 2020 - March 12, 2021
-                Griot Theater, 233 State St Chicago, IL 
-                $75
-            </p>
-            <button class="btn btn-warning">Read More</button>
+    <div class="show-schedule-container p-5">
+        <h3 class="scheduled-month bg-light border ps-5">April 2020</h3>
+        <div class="show-schedule-feature row border-bottom m-1 pt-2 pb-2 ps-5">
+            <div class="image-container col-sm-4">
+                <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront">
+            </div>
+            <div class="play-info d-flex flex-column col-sm-4">
+                <h3 class="play-title">A Raisin In The Sun</h3>
+                <h6 class="play-date">April 6, 2020 - March 12, 2021</h6>
+                <p class="play-location">Griot Theater, 233 State St Chicago, IL</p>
+                <p>$75
+                </p>
+            </div>
+            <div class="button-container col-sm-4">
+                <button class="btn btn-warning btn-lg text-light border-black">Read More</button>
+            </div>
+        </div>
+        <div class="show-schedule-feature row border-bottom m-1 pt-2 pb-2 ps-5">
+            <div class="image-container col-sm-4">
+                <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront">
+            </div>
+            <div class="play-info d-flex flex-column col-sm-4">
+                <h3 class="play-title">A Raisin In The Sun</h3>
+                <h6 class="play-date">April 6, 2020 - March 12, 2021</h6>
+                <p class="play-location">Griot Theater, 233 State St Chicago, IL</p>
+                <p>$75
+                </p>
+            </div>
+            <div class="button-container col-sm-4">
+                <button class="btn btn-warning btn-lg text-light border-black">Read More</button>
+            </div>
+        </div>
+        <div class="show-schedule-feature row border-bottom m-1 pt-2 pb-2 ps-5">
+            <div class="image-container col-sm-4">
+                <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront">
+            </div>
+            <div class="play-info d-flex flex-column col-sm-4">
+                <h3 class="play-title">A Raisin In The Sun</h3>
+                <h6 class="play-date">April 6, 2020 - March 12, 2021</h6>
+                <p class="play-location">Griot Theater, 233 State St Chicago, IL</p>
+                <p>$75
+                </p>
+            </div>
+            <div class="button-container col-sm-4">
+                <button class="btn btn-warning btn-lg text-light border-black">Read More</button>
+            </div>
+        </div>
+        <div class="show-schedule-feature row border-bottom m-1 pt-2 pb-2 ps-5">
+            <div class="image-container col-sm-4">
+                <img src="/cast_image/a-raisin-in-the-sun-theater-1.png" alt="man with tie child on table" class="play-forefront">
+            </div>
+            <div class="play-info d-flex flex-column col-sm-4">
+                <h3 class="play-title">A Raisin In The Sun</h3>
+                <h6 class="play-date">April 6, 2020 - March 12, 2021</h6>
+                <p class="play-location">Griot Theater, 233 State St Chicago, IL</p>
+                <p>$75
+                </p>
+            </div>
+            <div class="button-container col-sm-4">
+                <button class="btn btn-warning btn-lg text-light border-black">Read More</button>
+            </div>
         </div>
     </div>
     <!--Footer-->
-    <div class="bottom">
+        <footer>
+            <div class="bottom">
+                <div class="map">
+                    <img src="/mapimage/chicago map screenshot.png" alt="map of chicago" class="chi-town-map">
+                </div>
+                <div class="foot-info">
+                    <div class="foothead">Info</div>
+                    <div class="location">
+                        <p class="tiny"><i class="fas fa-map-marker-alt"></i>Chicago, IL 60611 United States</p>
+                    </div>
+                    <div class="email">
+                        <p class="tiny"><i class="far fa-envelope"></i> example@example.com</p>
+                    </div>
+                    <div class="phone">
+                        <p class="tiny"><i class="fas fa-mobile-alt"></i> Call Us: (555) 555-5555</p>
+                    </div>
+                </div>
+                <div class="foot-shows">
+                    <div class="foothead">Shows</div>
+                    <div class="venue">
+                        <a href="#"><p class="tiny">The Piano Lesson</p></a>
+                    </div>
+                    <div class="venue">
+                        <a href=""><p class="tiny">A Raisin In The Sun</p></a>
+                    </div>
+                    <div class="venue">
+                        <a href="#"><p class="tiny">FAME</p></a>
+                    </div>
+                    <div class="venue">
+                        <a href="#"><p class="tiny">The Color Purple</p></a>
+                    </div>
+                </div>
+                <div class="foot-socials">
+                    <div class="foothead">Social</div>
+                    <div class="media">
+                        <a href="#"><p class="tiny"><i class="fab fa-facebook"></i> Facebook</p></a>
+                    </div>
+                    <div class="media">
+                        <a href="#"><p class="tiny"><i class="fab fa-instagram"></i> Instagram</p></a>
+                    </div>
+                    <div class="media">
+                        <a href="#"><p class="tiny"><i class="fab fa-twitter"></i> Twitter</p></a>
+                    </div>
+                    <div class="media">
+                        <a href="#"><p class="tiny"><i class="fab fa-tiktok"></i> TikTok</p></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-    </div>
 
-
-</body>
+    </body>
 </html>
